# shiva

./: .env.example  .shiva.yml  LICENSE  README.md  action.yml  docker-compose.yml  pyproject.toml  shiva.config.yml
.github/workflows/: ci.yml  shiva-review.yml
data/: README.md
docs/: github-action.md  improving-reviews.md  migration-off-n8n.md  n8n.md  roadmap.md
scripts/: build_workflow.py  dev_tunnel.sh  e2e.py  feedback.py  review_pr.py
src/shiva_agent/: action.py  e2e.py  feedback.py  review.py
tests/: test_action.py  test_action_wiring.py  test_build_workflow.py  test_docs_links.py  test_e2e.py  test_e2e_keys.py  test_feedback.py  test_gate.py  test_llm_mapping.py  test_match_glob.py  test_prompt_discipline.py  test_review.py  test_review_pr.py  test_run_review.py  test_sanitize.py
workflows/: pr_review.agent.json  pr_review.json
