[project]
name = "shiva-agent"
version = "0.1.0"
description = "PR review agent logic and n8n workflow generator"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6"]

[project.optional-dependencies]
dev = ["pytest>=8", "faker>=30"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "scripts"]
testpaths = ["tests"]
